force-app/main/default/objects/Surgeon360Settings__c/Surgeon360Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Surgeon360 Settings</label>
</CustomObject>