force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Activities__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Activities__c</fullName>
    <label>Multiplier Activities</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>