force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Campaigns__c</fullName>
    <label>Multiplier Campaigns</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>