force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Healthcare_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Healthcare_Facilities__c</fullName>
    <label>Multiplier Healthcare Facilities</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>