force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Payors__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Payors__c</fullName>
    <label>Multiplier Payors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>