force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Peer_Networks__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Peer_Networks__c</fullName>
    <label>Multiplier Peer Networks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>