force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Percent_Zimmer_Usage__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Percent_Zimmer_Usage__c</fullName>
    <label>Multiplier Percent Zimmer Usage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>