force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Product_Usage_Market__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Product_Usage_Market__c</fullName>
    <label>Multiplier Product Usage Market</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>