force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Public_Engagements__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Public_Engagements__c</fullName>
    <label>Multiplier Public Engagements</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>