force-app/main/default/objects/Surgeon360Settings__c/fields/Multiplier_Sunshine_Payments__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Sunshine_Payments__c</fullName>
    <label>Multiplier Sunshine Payments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>